k8spspselinux.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Controls the SELinux context of the container. Introduced in ACM
      v1.3.0.
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"templates.gatekeeper.sh/v1beta1","kind":"ConstraintTemplate","metadata":{"annotations":{"description":"Controls the SELinux context of the container. Introduced in ACM v1.3.0."},"labels":{"configmanagement.gke.io/configmanagement":"config-management","k8s-app":"kubernetes-config-management","policycontroller.configmanagement.gke.io":"true"},"name":"k8spspselinux","ownerReferences":[{"apiVersion":"configmanagement.gke.io/v1","blockOwnerDeletion":true,"controller":true,"kind": [...]
  creationTimestamp: "2021-09-01T19:15:22Z"
  generation: 1
  labels:
    configmanagement.gke.io/configmanagement: config-management
    k8s-app: kubernetes-config-management
    policycontroller.configmanagement.gke.io: "true"
  managedFields:
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:description: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:configmanagement.gke.io/configmanagement: {}
          f:k8s-app: {}
          f:policycontroller.configmanagement.gke.io: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"e1113c3f-44c2-4a94-ad86-55422839f36f"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        .: {}
        f:crd:
          .: {}
          f:spec:
            .: {}
            f:names:
              .: {}
              f:kind: {}
            f:validation:
              .: {}
              f:legacySchema: {}
              f:openAPIV3Schema:
                .: {}
                f:properties: {}
        f:targets: {}
    manager: Go-http-client
    operation: Update
    time: "2021-09-01T19:15:22Z"
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:byPod: {}
        f:created: {}
    manager: gatekeeper
    operation: Update
    time: "2021-09-01T19:17:10Z"
  name: k8spspselinux
  ownerReferences:
  - apiVersion: configmanagement.gke.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: ConfigManagement
    name: config-management
    uid: e1113c3f-44c2-4a94-ad86-55422839f36f
  resourceVersion: "5283470"
  uid: 55e37257-ce46-42e6-b7f0-502dac295e7c
spec:
  crd:
    spec:
      names:
        kind: K8sPSPSELinux
      validation:
        legacySchema: true
        openAPIV3Schema:
          properties:
            allowedSELinuxOptions:
              properties:
                level:
                  type: string
                role:
                  type: string
                type:
                  type: string
                user:
                  type: string
              type: object
  targets:
  - rego: |
      package k8spspselinux

      violation[{"msg": msg, "details": {}}] {
        c := input_security_context[_]
        not input_seLinuxOptions_allowed(c.securityContext.seLinuxOptions)
        msg := sprintf("SELinux option is not allowed, pod: %v. Allowed options: %v", [input.review.object.metadata.name, input.parameters.allowedSELinuxOptions])
      }

      input_seLinuxOptions_allowed(options) {
        input.parameters.allowedSELinuxOptions.level == options.level
      }

      input_seLinuxOptions_allowed(options) {
        input.parameters.allowedSELinuxOptions.role == options.role
      }

      input_seLinuxOptions_allowed(options) {
        input.parameters.allowedSELinuxOptions.type == options.type
      }

      input_seLinuxOptions_allowed(options) {
        input.parameters.allowedSELinuxOptions.user == options.user
      }

      input_security_context[c] {
        c := input.review.object.spec
      }

      input_security_context[c] {
        c := input.review.object.spec.containers[_]
        has_field(c.securityContext, "seLinuxOptions")
      }

      input_security_context[c] {
        c := input.review.object.spec.initContainers[_]
        has_field(c.securityContext, "seLinuxOptions")
      }

      # has_field returns whether an object has a field
      has_field(object, field) {
        object[field]
      }
    target: admission.k8s.gatekeeper.sh
status:
  byPod:
  - id: gatekeeper-audit-79966db76-g9t4n
    observedGeneration: 1
    operations:
    - audit
    - status
    templateUID: 55e37257-ce46-42e6-b7f0-502dac295e7c
  - id: gatekeeper-controller-manager-78bb8f574f-qthrj
    observedGeneration: 1
    operations:
    - webhook
    templateUID: 55e37257-ce46-42e6-b7f0-502dac295e7c
  - id: gatekeeper-mutation-7696499fc9-4xr86
    observedGeneration: 1
    operations:
    - mutation-status
    - webhook
    templateUID: 55e37257-ce46-42e6-b7f0-502dac295e7c
  created: true
